--- a/Snowflake_Assignment _Suprabhat.ipynb
+++ b/Snowflake_Assignment _Suprabhat.ipynb
@@ -1,23 +1,206 @@
-{
- "metadata": {
-  "kernelspec": {
-   "display_name": "Streamlit Notebook",
-   "name": "streamlit"
-  }
- },
- "nbformat_minor": 5,
- "nbformat": 4,
- "cells": [
-  {
-   "cell_type": "code",
-   "id": "0e223728-9391-46a9-9f79-9a910633ab6e",
-   "metadata": {
-    "language": "sql",
-    "name": "cell1"
-   },
-   "outputs": [],
-   "source": "CREATE ROLE ADMIN;\nCREATE ROLE DEVELOPER;\nCREATE ROLE PII;\n\nGRANT ROLE ACCOUNTADMIN TO ROLE ADMIN;\nGRANT ROLE ACCOUNTADMIN TO ROLE PII;\nGRANT ROLE ADMIN TO ROLE DEVELOPER;\n\nGRANT ROLE ADMIN TO USER AXSHK;\nGRANT ROLE PII TO USER AXSHK;\nGRANT ROLE DEVELOPER TO USER AXSHK;\n\nCREATE TABLE employees_csv (\n    EMPLOYEE_ID INT PRIMARY KEY,\n    FIRST_NAME VARCHAR(50),\n    LAST_NAME VARCHAR(50),\n    EMAIL VARCHAR(100),\n    PHONE_NUMBER VARCHAR(20),\n    HIRE_DATE DATE,\n    JOB_ID VARCHAR(10),\n    SALARY DECIMAL(10, 2),\n    COMMISSION_PCT DECIMAL(5, 2),\n    MANAGER_ID INT,\n    DEPARTMENT_ID INT,\n    ADDRESS VARCHAR(255)\n);\n\nCREATE OR REPLACE STAGE employees_data_int_stage;\nls @employees_data_int_stage;\n\nCREATE OR REPLACE FILE FORMAT infer_csv_format\nTYPE = CSV\nCOMPRESSION = GZIP\nFIELD_DELIMITER = ','\nPARSE_HEADER = TRUE\nDATE_FORMAT = 'YYYY-MM-DD'\nFIELD_OPTIONALLY_ENCLOSED_BY = '\"'\n\nSELECT * FROM TABLE(INFER_SCHEMA(\n LOCATION=>'@employees_data_int_stage/employees2.csv.gz'\n , FILE_FORMAT=>'infer_csv_format'));\n\n CREATE OR REPLACE TABLE employees_csv USING TEMPLATE (\nSELECT ARRAY_AGG(OBJECT_CONSTRUCT(*)) \n WITHIN GROUP (ORDER BY ORDER_ID)\n FROM TABLE (INFER_SCHEMA(\n LOCATION=>'@employees_data_int_stage/employees2.csv.gz',\n FILE_FORMAT=>'infer_csv_format')));\n\n SELECT GET_DDL('table', 'employees_csv');\n\nALTER TABLE employees_csv ADD COLUMN elt_by VARCHAR(100);\nALTER TABLE employees_csv ADD COLUMN elt_ts TIMESTAMP_LTZ;\nALTER TABLE employees_csv ADD COLUMN file_name VARCHAR(100);\n\nCREATE OR REPLACE FILE FORMAT read_csv_format\nTYPE = CSV\nFIELD_DELIMITER = ','\nSKIP_HEADER = 1\nFIELD_OPTIONALLY_ENCLOSED_BY = '\"'\nEMPTY_FIELD_AS_NULL = TRUE\n\nCOPY INTO employees_csv (\n    EMPLOYEE_ID,\n\tFIRST_NAME,\n\tLAST_NAME,\n\tEMAIL,\n\tPHONE_NUMBER,\n\tHIRE_DATE,\n\tJOB_ID,\n\tSALARY,\n\tCOMMISSION_PCT,\n\tMANAGER_ID,\n\tDEPARTMENT_ID,\n\tADDRESS,\n    ELT_BY,\n    ELT_TS,\n    FILE_NAME\n)\nFROM (\n    SELECT $1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, 'my_app_name' AS ELT_BY, CURRENT_TIMESTAMP AS ELT_TS, METADATA$FILENAME AS FILE_NAME FROM '@employees_data_int_stage/employees2.csv.gz' (file_format => 'read_csv_format')\n)\nON_ERROR = SKIP_FILE;\n\nselect * from employees_csv;\n\nCREATE OR REPLACE TABLE employees_variant(\nemployee_data VARIANT\n);\n\nINSERT INTO employees_variant(\nSELECT TO_VARIANT(OBJECT_CONSTRUCT(*))\nFROM employees_csv\n);\n\nSELECT * FROM employees_variant;\n\nCREATE OR REPLACE STORAGE INTEGRATION s3_integration\nTYPE = EXTERNAL_STAGE\nSTORAGE_PROVIDER = 'S3'\nSTORAGE_AWS_ROLE_ARN = 'arn:aws:iam::545009850146:role/Aashu_AWS'\nENABLED = TRUE\nSTORAGE_ALLOWED_LOCATIONS = (\"s3://snowflake-sigmoid-bucket/\");\n\nDESCRIBE INTEGRATION s3_integration;\n\nCREATE OR REPLACE STAGE employees_data_ext_stage\nURL = 's3://newbucketdottxt/employees.csv'\nSTORAGE_INTEGRATION = s3_integration;\n\nlist @employees_data_ext_stage;\n\nCREATE OR REPLACE TABLE employees_external(\n\tEMPLOYEE_ID NUMBER(3,0),\n\tFIRST_NAME VARCHAR(16777216),\n\tLAST_NAME VARCHAR(16777216),\n\tEMAIL VARCHAR(16777216),\n\tPHONE_NUMBER VARCHAR(16777216),\n\tHIRE_DATE DATE,\n\tJOB_ID VARCHAR(16777216),\n\tSALARY NUMBER(5,0),\n\tCOMMISSION_PCT NUMBER(3,2),\n\tMANAGER_ID NUMBER(3,0),\n\tDEPARTMENT_ID NUMBER(3,0),\n\tADDRESS VARCHAR(16777216),\n    elt_by VARCHAR(100),\n    elt_ts TIMESTAMP_LTZ,\n    file_name varchar(100)\n);\n\nCOPY INTO employees_external\nFROM (\n    SELECT $1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, 'my_app_name' AS ELT_BY, CURRENT_TIMESTAMP AS ELT_TS, METADATA$FILENAME AS FILE_NAME FROM '@employees_data_int_stage/employees2.csv.gz'\n)\nFILE_FORMAT = (skip_header = 1, field_optionally_enclosed_by = '\"')\nON_ERROR = SKIP_FILE;\n\nSELECT * FROM employees_external;\n\nCREATE OR REPLACE FILE FORMAT infer_parquet_format\nTYPE = PARQUET\nCOMPRESSION = AUTO\nUSE_LOGICAL_TYPE = TRUE\nTRIM_SPACE = TRUE\nREPLACE_INVALID_CHARACTERS = TRUE\nNULL_IF = ( '\\N', 'NULL', 'NUL', '' );\n\nSELECT * FROM TABLE(INFER_SCHEMA(\n LOCATION=>'@employees_data_ext_stage/titanic.parquet'\n , FILE_FORMAT=>'infer_parquet_format'\n , MAX_RECORDS_PER_FILE => 10));\n\n SELECT *, 'my_app_name' AS ELT_BY, CURRENT_TIMESTAMP AS ELT_TS, METADATA$FILENAME AS FILE_NAME FROM '@employees_data_ext_stage/titanic.parquet' (FILE_FORMAT => infer_parquet_format);\n\n CREATE OR REPLACE MASKING POLICY pii_mask AS (val string) RETURNS string ->\nCASE\n    WHEN current_role() IN ('DEVELOPER') THEN '****'\n    ELSE val\nEND;\n\nALTER TABLE IF EXISTS employees_csv MODIFY COLUMN email SET MASKING POLICY pii_mask;\nALTER TABLE IF EXISTS employees_csv MODIFY COLUMN address SET MASKING POLICY pii_mask;\nALTER TABLE IF EXISTS employees_csv MODIFY COLUMN phone_number SET MASKING POLICY pii_mask\n\nuse role DEVELOPER;\n\nSELECT * FROM employees_csv;",
-   "execution_count": null
-  }
- ]
-}
+-- Create Roles
+create role admin;
+create role developer;
+create role PII;
+
+
+-- Create warehouse
+CREATE WAREHOUSE assignment_wh
+                WAREHOUSE_SIZE = 'MEDIUM'
+                WAREHOUSE_TYPE = 'STANDARD'
+                AUTO_SUSPEND = 600
+                AUTO_RESUME = TRUE
+                MIN_CLUSTER_COUNT = 1
+                MAX_CLUSTER_COUNT = 2
+                SCALING_POLICY = STANDARD
+                COMMENT = 'Warehouse for assignment queries';
+                
+-- Create the database
+CREATE OR REPLACE DATABASE assignment_db;
+
+
+-- Switch to assignment_db
+USE DATABASE assignment_db;
+
+
+-- Create the schema
+CREATE OR REPLACE SCHEMA my_schema;
+                
+-- Give privilages to admin role
+GRANT ALL PRIVILEGES ON WAREHOUSE assignment_wh TO ROLE admin;
+GRANT ALL PRIVILEGES ON DATABASE assignment_db TO ROLE admin;
+GRANT ALL PRIVILEGES ON SCHEMA assignment_db.my_schema TO ROLE admin;
+GRANT INSERT, UPDATE, DELETE, SELECT ON ALL TABLES IN SCHEMA assignment_db.my_schema TO ROLE admin;
+
+
+GRANT ROLE admin TO ROLE accountadmin;
+
+
+-- For developer role
+GRANT USAGE ON WAREHOUSE assignment_wh TO ROLE developer;
+GRANT USAGE ON DATABASE assignment_db TO ROLE developer;
+GRANT USAGE ON SCHEMA assignment_db.my_schema TO ROLE developer;
+GRANT INSERT, UPDATE, DELETE, SELECT ON ALL TABLES IN SCHEMA assignment_db.my_schema TO ROLE developer;
+
+
+GRANT ROLE developer TO ROLE admin;
+
+
+-- For PII role
+GRANT USAGE ON WAREHOUSE assignment_wh TO ROLE PII;
+GRANT USAGE ON DATABASE assignment_db TO ROLE PII;
+GRANT USAGE ON SCHEMA assignment_db.my_schema TO ROLE PII;
+GRANT SELECT ON ALL TABLES IN SCHEMA assignment_db.my_schema TO ROLE PII;
+GRANT ROLE PII TO ROLE accountadmin;
+
+
+-- Create a table to store the data
+CREATE OR REPLACE TABLE employee_data (
+    elt_ts TIMESTAMP DEFAULT CURRENT_TIMESTAMP(),
+    elt_by VARCHAR DEFAULT 'Snowflake worksheet',
+    file_name VARCHAR,
+    id INT,
+    name VARCHAR,
+    email VARCHAR,
+    phone VARCHAR,
+    hiredate TIMESTAMP,
+    age INT,
+    salary FLOAT
+);
+
+
+-- Create variant version of the employee_data table
+CREATE OR REPLACE TABLE employee_data_variant (
+    id INT,
+    name VARCHAR,
+    employee_data VARIANT, 
+    hiredate TIMESTAMP,
+    age INT,
+    salary FLOAT
+);
+
+
+-- INTERNAL STAGE
+-- Create file format
+CREATE OR REPLACE FILE FORMAT emp_file_format
+                              type = csv
+                              field_delimiter = ', '
+                              skip_header = 1
+                              Null_if = ('Null','null')
+                              empty_field_as_null = true;                            
+
+
+-- Create an internal stage
+CREATE OR REPLACE STAGE internal_stage
+                        FILE_FORMAT = emp_file_format;
+
+
+-- Load data from the sample CSV into the internal stage using snowsql
+-- PUT file:///Users/archanaashture/Downloads/snowflake_vendor/assignment/empData.csv @internal_stage;
+
+
+-- Copy data from the internal_stage into the table employee_data
+COPY INTO employee_data (file_name, id, name, phone, email, hiredate, age, salary)
+FROM (SELECT 
+       METADATA$FILENAME AS file_name,  
+       $1, $2, $3, $4, $5, $6, $7 
+     FROM @internal_stage)
+FILE_FORMAT = emp_file_format
+ON_ERROR = 'skip_file';
+
+
+--EXTERNAL STAGE
+-- Create storage integration
+CREATE OR REPLACE STORAGE INTEGRATION s3_int2
+                  type = external_stage
+                  storage_provider = s3
+                  enabled = true
+                  storage_aws_role_arn = 'arn:aws:iam::637423504940:role/de'
+                  storage_allowed_locations = ('s3://assignment-buck');
+
+
+-- Create external stage, 
+CREATE OR REPLACE STAGE external_stage 
+                  storage_integration = s3_int2
+                  url = 's3://assignment-buck/empData.csv'
+                  file_format = emp_file_format;
+
+
+-- Integrtaion in aws
+desc integration s3_int2;
+
+
+--  Load data into the variant table from external_stage
+COPY INTO employee_data_variant (id, name, employee_data, hiredate, age, salary )
+FROM (SELECT $1, $2,
+       PARSE_JSON('{
+           "phone": "' || $3 || '",
+           "email": "' || $4 || '"
+       }'), $5, $6, $7
+       FROM @external_stage)
+FILE_FORMAT = emp_file_format
+ON_ERROR = 'skip_file';
+
+
+select * from employee_data_variant limit 10;
+
+
+-- Upload parquet file to the stage location
+-- Create file format
+CREATE FILE FORMAT parquet_format
+                   TYPE = parquet;
+
+
+-- Create stage
+CREATE OR REPLACE STAGE parquet_stage
+                        FILE_FORMAT = parquet_format; 
+
+
+-- load file into the stage using snowsql                        
+-- PUT file:///Users/archanaashture/Downloads/snowflake_vendor/assignment/Flights.parquet @parquet_stage;        
+
+
+-- Infer the schema of the file
+SELECT * 
+FROM TABLE(
+    INFER_SCHEMA(
+      LOCATION=>'@parquet_stage/Flights.parquet',
+      FILE_FORMAT=>'parquet_format'
+      )
+    );
+
+
+-- Select query on the staged parquet file
+SELECT *
+FROM @parquet_stage/Flights.parquet 
+limit 10;
+
+
+
+
+-- Create masking policy for email
+CREATE MASKING POLICY email_masking AS (val string) returns string ->
+  CASE
+    WHEN current_role() IN ('PII') THEN VAL
+    ELSE '**********'
+  END;
+  
+-- Create masking policy for phone
+CREATE MASKING POLICY phone_masking AS (val string) returns string ->
+  CASE
+    WHEN current_role() IN ('PII') THEN VAL
+    ELSE '**********'
+  END;
+
+
+-- alter table to apply masking policy on the email and phone column
+alter table employee_data modify column email set masking policy email_masking;
+alter table employee_data modify column phone set masking policy phone_masking;
+
+
+-- switch role to developer, email and phone are masked
+use role developer;
+use role PII;
+
+
+SELECT * FROM EMPLOYEE_DATA limit 5;
